footer bug disabled (overflow on wrapper); replaced column flex /w row

--- a/style.css
+++ b/style.css
@@ -73,8 +73,7 @@ body {
 .wrapper {
     width: 100vw;
     display: flex;
-    flex-direction: column;
-    overflow: scroll;
+    flex-direction: row;
     /* fills beneath header */
     background-color: rgb(31, 31, 31);
 }
@@ -205,7 +204,6 @@ main {
     flex-grow: 2.5;
     flex-basis: 0;
     background-color: white;
-    padding-bottom: 20px;
 }
 
 .main-title, p, h2, h3, h4 {
